Add .idea to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-naries for programs and plugins
+# Binaries for programs and plugins
 *.exe
 *.dll
 *.so
@@ -9,4 +9,7 @@ naries for programs and plugins
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# IntelliJ
+.idea/
 
